# inventario-jrtec

./: docker-compose.yml  pyproject.toml
inventario/: Dockerfile  pyproject.toml
inventario-jrtec/app/: main.py
inventario-jrtec/app/api/api_v1/: api.py
inventario-jrtec/app/api/api_v1/endpoints/: product.py
inventario-jrtec/app/api/endpoints/: product.py
inventario/app/: main.py
inventario/app/api/api_v1/: api.py
inventario/app/api/api_v1/endpoints/: audio_converter.py  product.py  sell.py
inventario/app/db/: db.py
inventario/app/schemas/: audio_converter.py  product.py  response.py  sell.py
traefik/: traefik.yml
