[tool.poetry]
name = "inventario"
version = "0.1.0"
description = ""
authors = ["pelaezluis <luispelaezbedoya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.18.3"

[tool.poetry.scripts]
fastapi = "app.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
